css/footer.css
.footer {
    background-color: #2e2f42;
    line-height: 1.5;
    color: #f4f4fd;
    padding: 100px 0;
}

.footer-container {
    display: flex;
    gap: 24px;
    row-gap: 72px;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
}

.footer-text {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #f4f4fd;
    margin-top: 16px;
}

.socials-footer {
    display: flex;
    gap: 16px;
    margin-top: 16px;
}

.footer-social-icon {
    display: block;
    padding: 8px;
    width: 40px;
    height: 40px;
    border-radius: 40px;
    background-color: #4D5AE5;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}


.footer-social-icon:hover, .footer-social-icon:focus {
    background-color: #31D0AA;
}

.footer .flex-container {
    justify-content: flex-start;
    align-items: flex-start;
}

.logo-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer-left {
    max-width: 288px;
}



.footer-socials-header {
    font-weight: 500;
    letter-spacing: 0.02em; 
    font-size: 16px;
    line-height: 1.5;
    text-align: center;
}

.footer-subscribe-title {
    color: #fff;
    margin-bottom: 16px;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    text-align: center;
}

.footer-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}

.footer-input {
    padding-left: 16px;
    width: 264px;
    height: 40px;
    color: #FFF;
    border: 1px solid #FFF;
    border-radius: 4px;
    background-color: transparent;
    font-size: 12px;
    line-height: 2;
    letter-spacing: 0.04em;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-input::placeholder {
    color: #FFF;
}

.footer-input:focus {
    border-color: #31D0AA;
    outline: none;
}

.footer-submit-btn {
    display: flex;
    align-items: center;
    gap: 16px;
    padding: 8px 24px;
    color: #FFF;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.04em;
    border: none;
    border-radius: 4px;
    background-color: #4D5AE5;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-submit-btn:hover,
.footer-submit-btn:focus {
    background-color: #31D0AA;
}

@media screen and (min-width: 768px) {
    .footer-container {
        flex-direction: row;
    }
    .footer-left {
        max-width: 264px;
    }
    .footer-socials {
        margin-right: 83px;
    }

    .footer-container {
        justify-content: normal;
        align-items: normal;
    }
    .footer-form {
        gap: 24px;
        flex-direction: row;
    }
}

@media screen and (min-width: 1158px) {
    .footer-left {
        margin-right: 120px;
    }

    .footer-container {
        gap: 0
    }
}

